#93 - alignment issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2887,8 +2887,14 @@ label .fa.checkbox-inline.fa-check-circle {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+.msg-info textarea {
+  text-indent: 0px;
+}
 .contribute .option {
   margin: 2.5em 0;
+}
+.contribute .option textarea {
+  text-indent: 0px;
 }
 .contribute .align-top {
   -webkit-box-align: baseline;
@@ -2923,6 +2929,9 @@ label .fa.checkbox-inline.fa-check-circle {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.contribute .align-top .s-label.schedule .flex-col > span {
+  padding-left: 0.3em;
 }
 .contribute .align-top .s-label.schedule .date-field {
   display: none;
@@ -3348,11 +3357,12 @@ label .fa.checkbox-inline.fa-check-circle {
     text-align: center;
   }
   .name-box .voucher .col.voucher-name img {
-    margin: 0 0.5em 0 0;
+    margin: 0 0.5em 0 -2.5em;
     display: block;
   }
   .name-box .voucher .col.voucher-name span {
     margin-left: 0;
+    text-align: left;
   }
   .gift-note {
     margin: 8.5em auto 2em auto;
@@ -3364,6 +3374,10 @@ label .fa.checkbox-inline.fa-check-circle {
   .width-box {
     margin-left: 1.3em;
     margin-right: 1.3em;
+  }
+  .input-label,
+  .label-caption {
+    font-size: 1.01em;
   }
 }
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
